fix Primitive wrapper constructors