@@ -10,6 +10,7 @@
 package vnmr.lc;
 
 import java.util.ArrayList;
+import java.util.Objects;
 
 import vnmr.util.Messages;
 import vnmr.util.StrUtil;
@@ -207,7 +208,7 @@ public class LcMethodParameter {
         if (m_type.equals(STRING_TYPE) || m_type.equals(MS_SCAN_TYPE)) {
             return "";
         } else if (m_type.equals(INT_TYPE)) {
-            return new Integer(0);
+            return Integer.valueOf(0);
         } else if (m_type.equals(DOUBLE_TYPE)) {
             return new Double(0.0);
         } else {                // Default is BOOLEAN_TYPE
@@ -386,7 +387,7 @@ public class LcMethodParameter {
      */
     public boolean setValue(int idx, Object value) {
         Object oldValue = getValue(idx);
-        if (oldValue == value || (value != null && value.equals(oldValue))) {
+        if (Objects.equals(value, oldValue)) {
             return false;
         }
         while (m_values.size() <= idx) {
