@@ -122,7 +122,7 @@ public class JbParameters
             if (oldVal instanceof Float) {
                 newVal = new Float(value);
             } else if (oldVal instanceof Integer) {
-                newVal = new Integer(value);
+                newVal = Integer.valueOf(value);
             } else if (oldVal instanceof String) {
                 newVal = value;
             }
@@ -141,11 +141,11 @@ public class JbParameters
     }
 
     public boolean setByte(String name, int value) {
-        return set(name, new Byte((byte)value));
+        return set(name, Byte.valueOf((byte) value));
     }
 
     public boolean set(String name, int value) {
-        return set(name, new Integer(value));
+        return set(name, Integer.valueOf(value));
     }
 
     public boolean set(String name, float value) {
@@ -312,7 +312,7 @@ public class JbParameters
         {"Noise Monitor Length",       NOISE_MONITOR_LENGTH_MIN},
         {"Diagnostic Method Enabled",  DIAGNOSTIC_METHOD_DISABLED},
         {"Processing Stage Bypass",    ZERO}, // Req for user mode
-        {"Bandwidth Filter Size",      new Integer(-1)}, // Req for user mode
+        {"Bandwidth Filter Size", Integer.valueOf(-1)}, // Req for user mode
         // Method Lines
         {"Run Time",                   ZERO},
         {"Param Wavelength 1",         new Float(190)},
@@ -329,32 +329,32 @@ public class JbParameters
         {"Param Peaksense Peak Width", TWO},
         {"Param Peaksense S N Ratio",  TWO},
         {"Param Time Slice Trigger",   TIME_SLICE_TRIGGER_OFF},
-        {"Param Time Slice Period",    new Integer(1000)}, // ms
+        {"Param Time Slice Period", Integer.valueOf(1000)}, // ms
         {"Param Level Sense Threshold", new Float(0.1)}, // AU
         {"Param Method End",           END_RUN_HOLD},
 
         // These codes should be considered read only
-        {"Code Wavelength 1",          new Byte((byte)0x10)},
-        {"Code Wavelength 2",          new Byte((byte)0x11)},
-        {"Code Autozero 1",            new Byte((byte)0x12)},
-        {"Code Autozero 2",            new Byte((byte)0x13)},
-        {"Code Analog 1 Attn",         new Byte((byte)0x14)},
-        {"Code Analog 2 Attn",         new Byte((byte)0x15)},
-        {"Code Output Relay 1",        new Byte((byte)0x16)},
-        {"Code Output Relay 2",        new Byte((byte)0x17)},
-        {"Code Output Relay 3",        new Byte((byte)0x18)},
-        {"Code Output Relay 4",        new Byte((byte)0x19)},
-        {"Code Peaksense Relay Mode",  new Byte((byte)0x1a)},
-        {"Code Peaksense Peak Width",  new Byte((byte)0x1b)},
-        {"Code Peaksense S N Ratio",   new Byte((byte)0x1c)},
-        {"Code Time Slice Trigger",    new Byte((byte)0x1d)},
-        {"Code Time Slice Period",     new Byte((byte)0x1e)},
-        {"Code Level Sense Threshold", new Byte((byte)0x1f)},
-        {"Code Method End",            new Byte((byte)0xf0)},
-        {"Code",                       new Byte((byte)0)},
+        {"Code Wavelength 1", Byte.valueOf((byte) 0x10)},
+        {"Code Wavelength 2", Byte.valueOf((byte) 0x11)},
+        {"Code Autozero 1", Byte.valueOf((byte) 0x12)},
+        {"Code Autozero 2", Byte.valueOf((byte) 0x13)},
+        {"Code Analog 1 Attn", Byte.valueOf((byte) 0x14)},
+        {"Code Analog 2 Attn", Byte.valueOf((byte) 0x15)},
+        {"Code Output Relay 1", Byte.valueOf((byte) 0x16)},
+        {"Code Output Relay 2", Byte.valueOf((byte) 0x17)},
+        {"Code Output Relay 3", Byte.valueOf((byte) 0x18)},
+        {"Code Output Relay 4", Byte.valueOf((byte) 0x19)},
+        {"Code Peaksense Relay Mode", Byte.valueOf((byte) 0x1a)},
+        {"Code Peaksense Peak Width", Byte.valueOf((byte) 0x1b)},
+        {"Code Peaksense S N Ratio", Byte.valueOf((byte) 0x1c)},
+        {"Code Time Slice Trigger", Byte.valueOf((byte) 0x1d)},
+        {"Code Time Slice Period", Byte.valueOf((byte) 0x1e)},
+        {"Code Level Sense Threshold", Byte.valueOf((byte) 0x1f)},
+        {"Code Method End", Byte.valueOf((byte) 0xf0)},
+        {"Code", Byte.valueOf((byte) 0)},
 
         // Get multiple spectra
-        {"MaxNumberOfSpectra",         new Integer(100)},
+        {"MaxNumberOfSpectra", Integer.valueOf(100)},
         // Lamp
         {"Lamp",                       LAMP_BOTH},
         {"Lamp Action",                LAMP_OFF},
@@ -401,7 +401,7 @@ public class JbParameters
         // Get Strings
         {"MoreFlag",                   LAST_DATA},
         {"ErrorCode",                  ZERO},
-        {"StringDescription",          "Some String",          new Integer(52)},
+        {"StringDescription",          "Some String", Integer.valueOf(52)},
         //Get Globals
         {"InstType",                   ZERO},
         {"InstConfig",                 ZERO},
@@ -413,10 +413,10 @@ public class JbParameters
         {"LampActionOnError",          ZERO},
         {"Normalize9x0",               ZERO},
         {"FirmwareRevisionLevel",      "-",                    ONE},
-        {"FirmwareIssueNumber",        new Byte((byte)0)},
+        {"FirmwareIssueNumber", Byte.valueOf((byte) 0)},
 
         // Spare
         {"Spare Int Parameter",        ZERO},
-        {"Spare 10 Bytes",             "Some String",          new Integer(10)},
+        {"Spare 10 Bytes",             "Some String", Integer.valueOf(10)},
     };
 }
