@@ -1591,8 +1591,8 @@ public class ServicePopup extends JDialog implements ActionListener,
             format.setParseIntegerOnly(true);
             format.setDecimalSeparatorAlwaysShown(false);
             NumberFormatter nf = new NumberFormatter(format);
-            nf.setMinimum(new Integer(1));
-            nf.setMaximum(new Integer(Integer.MAX_VALUE));
+            nf.setMinimum(Integer.valueOf(1));
+            nf.setMaximum(Integer.valueOf(Integer.MAX_VALUE));
             nf.setAllowsInvalid(true);
             nf.setCommitsOnValidEdit(true);
             tfRangeFrom = new JFormattedTextField(nf);
@@ -1686,12 +1686,12 @@ public class ServicePopup extends JDialog implements ActionListener,
 
             if (min < 1) {
                 min = 1;
-                tfRangeFrom.setValue(new Integer(1));
+                tfRangeFrom.setValue(Integer.valueOf(1));
             }
 
             if (max < min) {
                 max = min;
-                tfRangeTo.setValue(new Integer(min));
+                tfRangeTo.setValue(Integer.valueOf(min));
             }
 
             PageRanges pr = new PageRanges(min, max);
@@ -1892,14 +1892,14 @@ public class ServicePopup extends JDialog implements ActionListener,
                 // max = Integer.MAX_VALUE;
                 max = 99;
             }
-            copiesModel.setMinimum(new Integer(min));
-            copiesModel.setMaximum(new Integer(max));
+            copiesModel.setMinimum(Integer.valueOf(min));
+            copiesModel.setMaximum(Integer.valueOf(max));
 
             int value = cp.getValue();
             if ((value < min) || (value > max)) {
                 value = min;
             }
-            copiesModel.setValue(new Integer(value));
+            copiesModel.setValue(Integer.valueOf(value));
 
             Class<SheetCollate> scCategory = SheetCollate.class;
             SheetCollate sc = null;
@@ -3459,7 +3459,7 @@ public class ServicePopup extends JDialog implements ActionListener,
             if ((value < 1) || (value > 100)) {
                 value = 1;
             }
-            snModel.setValue(new Integer(value));
+            snModel.setValue(Integer.valueOf(value));
             lblPriority.setEnabled(jpSupported);
             spinPriority.setEnabled(jpSupported);
 
